# linear-reminder

./: CHANGELOG.md  Cargo.toml  Justfile  README.md  Rocket.toml  Shuttle.toml  cliff.toml
.github/workflows/: general.yml
.sqlx/: query-02f7aac4951bbac0222a1e7c4288b5be982adb6895c682e3f69791e3f7334018.json  query-74d4c0b098ce1964a2d669adc9486b8ebc8e5c3e69fb76996d8742dc6944aa96.json  query-7f100e4420b2b8c086eac892d13f0ed114a5667b9c26fe7d99dcff1f4b3b1a9f.json  query-88d666876b27da4c19172c5e2fa681b937d5b16133da8d40dbc2fa654e9c3ac5.json  query-abb2ba1c278044fe039d1039a838dcb0b9d5ce104e74329df72bcef1dc80a0ee.json  query-ad994836ef486dea557f0ad8315dc55780121d04c11db0f0512fce8e814afbe8.json  query-dfe7bafa29678f8108886b9cbc213b303891eed84f8d6798ae20ca3666590a55.json  query-e7bf2d62ffc0076904e167ea1801ca447f525cd1121c28f8bdeff44b0c81b99e.json
config/: base.toml
migrations/: 1_issues.sql
src/: config.rs  main.rs
