[package]
name = "linear-reminder"
version = "0.1.0"
edition = "2021"
authors = ["Luke Hsiao <luke@hsiao.dev>"]
description = "Simple webhook server for posting reminder comments to Linear.app"
repository = "https://github.com/lukehsiao/linear-reminder"
homepage = "https://github.com/lukehsiao/linear-reminder"
license = "BlueOak-1.0.0"
keywords = ["linear", "reminder", "webhook", "server", "shuttle"]
publish = false

[dependencies]
chrono = "0.4.37"
config = { version = "0.14.0", features = ["toml"] }
hmac = "0.12.1"
humantime = "2.1.0"
reqwest = { version = "0.12.2", features = ["json"] }
rocket = { version = "0.5.0", features = ["json"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
shuttle-rocket = "0.42.0"
shuttle-runtime = "0.42.0"
shuttle-shared-db = { version = "0.42.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.4", features = ["chrono", "postgres"] }
tokio = "1.36.0"
tracing = "0.1.40"

[dev-dependencies]
pretty_assertions = "1.4.0"
